@@ -132,3 +132,116 @@ CONTRACT_TYPE
         }
     }
 }
+
+CONTRACT_TYPE
+{
+    // Unique name of the contract (required)
+    name = OrbitTest
+
+    // Contract text
+    title = OrbitTest
+    description = A more detailed description of the contract.  This is where you come in.
+    synopsis = We want you to do a thing.
+    completedMessage = You have done the thing.
+
+    // Target Celestial body - controls where the contract must be completed, has some automated
+    // effects on numeric parameters (increasing science, etc.)
+    targetBody = Kerbin
+
+    // Contract rewards
+    rewardFunds = 1000000.0
+    rewardScience = 100.0
+
+    maxSimultaneous = 1
+
+    PARAMETER
+    {
+        name = VesselParameterGroup1
+        type = VesselParameterGroup
+
+        // The text to display.
+        // Default - Do the following for <duration>
+        //title = 
+
+        // The duration that the conditions must be satisfied for.  Can specify values in
+        // years (y), days (d), hours (h), minutes (m), seconds (s) or any combination of those.
+        duration = 10d 2h
+
+        PARAMETER
+        {
+            name = OrbitApoapsis
+            type = OrbitApoapsis
+
+            disableOnStateChange = false
+
+            // Target body, defaulted from the contract if not supplied.
+            targetBody = Kerbin
+
+            // Minimum apoapsis in meters.
+            // Default = 0
+            minApA = 100000
+
+            // Maximum apoapsis in meters.
+            // Default = double.MaxValue
+            maxApA = 250000
+        }
+
+        PARAMETER
+        {
+            name = OrbitPeriapsis
+            type = OrbitPeriapsis
+
+            disableOnStateChange = false
+
+            // Target body, defaulted from the contract if not supplied.
+            targetBody = Kerbin
+
+            // Minimum periapsis in meters.
+            // Default = 0
+            minPeA = 100000
+
+            // Maximum periapsis in meters.
+            // Default = double.MaxValue
+            maxPeA = 250000
+        }
+
+        PARAMETER
+        {
+            name = OrbitEccentricity
+            type = OrbitEccentricity
+
+            disableOnStateChange = false
+
+            // Target body, defaulted from the contract if not supplied.
+            targetBody = Kerbin
+
+            // Minimum eccentricity.
+            // Default = 0
+            minEccentricity = 0.0
+
+            // Maximum eccentricity.
+            // Default = double.MaxValue
+            maxEccentricity = 0.1
+        }
+
+        PARAMETER
+        {
+            name = OrbitInclination
+            type = OrbitInclination
+
+            disableOnStateChange = false
+
+            // Target body, defaulted from the contract if not supplied.
+            targetBody = Kerbin
+
+            // Minimum inclination in degrees
+            // Default = 0
+            minInclination = 0
+
+            // Maximum inclination in degrees
+            // Default = 180
+            maxInclination = 180
+        }
+
+    }
+}
